--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'org.kie.modules:com-google-code-gson:6.5.0.Final'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -35,7 +34,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.google.dagger:dagger:2.20'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
-
     implementation 'com.google.android.gms:play-services:12.0.1'
-
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.github.pavlospt:circleview:1.3'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
